--- a/app/hot.html
+++ b/app/hot.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>my webapp</title>
+    <title>Hot session</title>
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:600' rel='stylesheet' type='text/css'>
@@ -48,7 +48,7 @@
 			    <!-- Collect the nav links, forms, and other content for toggling -->
 			    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			      <ul class="nav navbar-nav">
-			        <li><a href="hot.html">Hot <span class="sr-only">(current)</span></a></li>
+			        <li class="active"><a href="hot.html">Hot <span class="sr-only">(current)</span></a></li>
 			        <li><a href="fresh.html">Fresh</a></li>
 			      </ul>
 			      <ul class="nav navbar-nav navbar-right">
@@ -82,17 +82,17 @@
     
        <div class="container">
           <div class="jumbotron">
-            <h1>'Allo, 'Allo!</h1>
+            <h1>'Hotte, 'Hotte!</h1>
             <p class="lead">Always a pleasure scaffolding your apps.</p>
             <p><a class="btn btn-lg btn-success" href="#">Splendid!</a></p>
           </div>
           <div class="jumbotron">
-            <h1>'Allo, 'Allo!</h1>
+            <h1>'Hotte, 'Hotte!</h1>
             <p class="lead">Always a pleasure scaffolding your apps.</p>
             <p><a class="btn btn-lg btn-success" href="#">Splendid!</a></p>
           </div>
           <div class="jumbotron">
-            <h1>'Allo, 'Allo!</h1>
+            <h1>'Hotte, 'Hotte!</h1>
             <p class="lead">Always a pleasure scaffolding your apps.</p>
             <p><a class="btn btn-lg btn-success" href="#">Splendid!</a></p>
           </div>
@@ -129,7 +129,7 @@
 
 
   </div> <!-- row-->
-  
+  <br/>
 
 
 
@@ -138,7 +138,6 @@
 		<p class="text-left"><h4>&copy SuperFriends 2016</h4></p>
 	</div>
 	</footer>
-
 
 
 
